<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">FreeStyler Remote</string>

	<!-- Titles -->
	<string name="configTitle">FreeStyler Remote Configuration</string>
	<string name="mainMenuTitle">@string/app_name</string>
	<string name="consoleTitle">FreeStyler Remote Console</string>
	<string name="overrideButtonsTitle">@string/overrideButtons</string>

	<!-- Main menu options -->
	<string name="overrideButtons">Override Buttons</string>
	<string name="sequences">Sequences</string>
	<string name="fixtureControl">Fixture Control</string>
	<string name="console">Console</string>
	<string name="configuration">Configuration</string>
	<string name="connect">Connect</string>

	<!--  Configuration options -->
	<string name="prefCatServer">Server settings</string>
	<string name="configServerIp">Server IP Address</string>
	<string name="configServerIpSummary">The IP address of the computer running FreeStyler</string>
	<string name="configServerPort">Server Port</string>
	<string name="configServerPortSummary">FreeStyler TCP/IP server port</string>

	<string name="prefCatNames">Names of buttons and sequences</string>
	<string name="prefOverrideSettings">Override button names</string>
	<string name="prefSequenceSettings">Sequence names</string>

	<string name="configOverrideButton1Name">Button 1</string>
	<string name="configOverrideButton2Name">Button 2</string>
	<string name="configOverrideButton3Name">Button 3</string>
	<string name="configOverrideButton4Name">Button 4</string>
	<string name="configOverrideButton5Name">Button 5</string>
	<string name="configOverrideButton6Name">Button 6</string>
	<string name="configOverrideButton7Name">Button 7</string>
	<string name="configOverrideButton8Name">Button 8</string>
	<string name="configOverrideButton9Name">Button 9</string>
	<string name="configOverrideButton10Name">Button 10</string>
	<string name="configOverrideButton11Name">Button 11</string>
	<string name="configOverrideButton12Name">Button 12</string>
	<string name="configOverrideButton13Name">Button 13</string>
	<string name="configOverrideButton14Name">Button 14</string>
	<string name="configOverrideButton15Name">Button 15</string>
	<string name="configOverrideButton16Name">Button 16</string>
	<string name="configOverrideButton17Name">Button 17</string>
	<string name="configOverrideButton18Name">Button 18</string>
	<string name="configOverrideButton19Name">Button 19</string>
	<string name="configOverrideButton20Name">Button 20</string>
	<string name="configOverrideButton21Name">Button 21</string>
	<string name="configOverrideButton22Name">Button 22</string>
	<string name="configOverrideButton23Name">Button 23</string>
	<string name="configOverrideButton24Name">Button 24</string>
	<string name="configOverrideButton25Name">Button 25</string>
	<string name="configOverrideButton26Name">Button 26</string>
	<string name="configOverrideButton27Name">Button 27</string>
	<string name="configOverrideButton28Name">Button 28</string>
	<string name="configOverrideButton29Name">Button 29</string>
	<string name="configOverrideButton30Name">Button 30</string>
	<string name="configOverrideButton31Name">Button 31</string>
	<string name="configOverrideButton32Name">Button 32</string>

	<string name="configSequence1Name">Sequence 1</string>
	<string name="configSequence2Name">Sequence 2</string>
	<string name="configSequence3Name">Sequence 3</string>
	<string name="configSequence4Name">Sequence 4</string>
	<string name="configSequence5Name">Sequence 5</string>
	<string name="configSequence6Name">Sequence 6</string>
	<string name="configSequence7Name">Sequence 7</string>
	<string name="configSequence8Name">Sequence 8</string>
	<string name="configSequence9Name">Sequence 9</string>
	<string name="configSequence10Name">Sequence 10</string>
	<string name="configSequence11Name">Sequence 11</string>
	<string name="configSequence12Name">Sequence 12</string>
	<string name="configSequence13Name">Sequence 13</string>
	<string name="configSequence14Name">Sequence 14</string>
	<string name="configSequence15Name">Sequence 15</string>
	<string name="configSequence16Name">Sequence 16</string>
	<string name="configSequence17Name">Sequence 17</string>
	<string name="configSequence18Name">Sequence 18</string>
	<string name="configSequence19Name">Sequence 19</string>
	<string name="configSequence20Name">Sequence 20</string>

	<!-- Console commands -->
	<string name="send">Send</string>
	<string name="clear">Clear</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="slash">/</string>
	<string name="at">\@</string>
	<string name="all">all</string>
	<string name="ch">ch</string>

	<!-- Numbers  -->
	<string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="ten">10</string>
	<string name="eleven">11</string>
	<string name="twelve">12</string>
	<string name="thirteen">13</string>
	<string name="fourteen">14</string>
	<string name="fifteen">15</string>
	<string name="sixteen">16</string>
	<string name="seventeen">17</string>
	<string name="eighteen">18</string>
	<string name="nineteen">19</string>
	<string name="twenty">20</string>
	<string name="twentyone">21</string>
	<string name="twentytwo">22</string>
	<string name="twentythree">23</string>
	<string name="twentyfour">24</string>
	<string name="twentyfive">25</string>
	<string name="twentysix">26</string>
	<string name="twentyseven">27</string>
	<string name="twentyeight">28</string>
	<string name="twentynine">29</string>
	<string name="thirty">30</string>
	<string name="thirtyone">31</string>
	<string name="thirtytwo">32</string>

	<!-- Menu options -->

	<string-array name="mainMenu">
		<item>@string/overrideButtons</item>

		<item>@string/sequences</item>
		<item>@string/fixtureControl</item>
		<item>@string/console</item>
		<item>@string/configuration</item>
		<item>@string/connect</item>
	</string-array>
	<string-array name="mainMenuDescriptors">
		<item>Shows the override buttons</item>
		<item>Enables / Disables Sequences</item>
		<item>Controls fixture properties such as Colour, Dimmer, Gobos,
			Position, etc</item>
		<item>Provides a console to compose your own commands</item>
		<item>Edits the configuration settings of this application</item>
	</string-array>
	<string-array name="configMenu">
		<item>@string/configServerIp</item>
		<item>@string/configServerPort</item>
	</string-array>


</resources>
